atualização do jogo de adivinhação

--- a/Projeto_Adivinhar_Numero/index.html
+++ b/Projeto_Adivinhar_Numero/index.html
@@ -24,9 +24,10 @@
     <div class="banco">
         <label for="numero">Digite um número de 0 a 10:</label>
         <input type="number" id="valor">
-        <button type="submit" onclick="Inserir()" class="botao">Chutar</button>
+        <button type="submit" onclick="Inserir()" id="botao">Chutar</button>
 
         <div id="respostaChute"></div>
+        <p id="tentativas"></p>
     </div>
 
     <script src="./script.js"></script>
